--- a/templates/rooms/room.html
+++ b/templates/rooms/room.html
@@ -20,6 +20,7 @@
 
 <div class="lg:w-2/4 mt-6 lg:mx-auto p-4 bg-white rounded-xl">
     <form action="" method="POST" class="flex">
+        {% csrf_token %}
         <input type="text" name="content" class="flex-1 mr-3" placeholder="Tu mensaje..." id="chat-message-input">
 
         <button class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700" id="chat-message-submit">
